added var for service restart become user

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -7,6 +7,7 @@ hr_from_ssl: false
 hr_force_ssl: "{{ hr_from_ssl }}"
 hr_permanent: false
 hr_service_restart: false
+hr_service_user: root
 
 # Either
 hr_letsencrypt: "{{ hr_certificate_file | default(hr_from_ssl) }}"
