--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -5,3 +5,5 @@
     name: "{{ hr_httpd_service }}"
     state: restarted
   when: hr_service_restart
+  become: true
+  become_user: "{{ hr_service_user }}"
