--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -8,6 +8,7 @@ hr_force_ssl: "{{ hr_from_ssl }}"
 hr_permanent: false
 hr_service_restart: false
 hr_service_user: root
+hr_discard_query_string: false
 
 # Either
 hr_letsencrypt: "{{ hr_certificate_file | default(hr_from_ssl) }}"
@@ -21,6 +22,11 @@ hr_configuration_filename: "{{ hr_file_index | string + '-' + _hr_from_domain + 
 _hr_from_domain: "{{ hr_from_domains[0] }}"
 _hr_from_aliases: "{{ hr_from_domains[1:] }}"
 _hr_permanent: "{{ 'temp' if not hr_permanent else 'permanent' }}"
+_hr_flags:
+  - R={{ _hr_permanent }}
+  - "{{ 'QSD' if hr_discard_query_string else False }}"
+  - L
+_hr_flags_str: "[{{ ','.join(_hr_flags | select('ne', False)) }}]"
 
 hr_httpd_service: "{{ _hr_httpd_service_distro | distro(vars) }}"
 hr_httpd_conf_dir: "{{ _hr_httpd_conf_dir_distro | distro(vars) }}"
