added hr_remove to allow redirection removal

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -11,6 +11,8 @@ hr_service_user: root
 hr_discard_query_string: false
 # apache/nginx
 hr_service_provider: apache
+# true for deleting a config
+hr_remove: false
 
 # Either
 hr_letsencrypt: "{{ hr_certificate_file | default(hr_from_ssl) }}"
